Fixed image not showing issue

--- a/styles.css
+++ b/styles.css
@@ -251,7 +251,7 @@ header {
   top: 0;
   left: 0;
 
-  color:white;
+  color:var(--clr-light);
   font-size: 15rem;
   letter-spacing: 50px;
   z-index: 1;
@@ -278,7 +278,7 @@ header {
   align-items: center;
   width: 40px;
   height: 40px;
-  border: 3px solid white;
+  border: 3px solid var(--clr-light);
   border-radius: 50%;
   position: relative;
   transform: scale(0.8);
@@ -292,14 +292,14 @@ header {
   height: 100%;
   width: 100%;
   border-radius: 50%;
-  border: 3px solid white;
+  border: 3px solid var(--clr-light);
   animation: hamburger_pulse 1s ease infinite;
 }
 
 .hamburger .bar {
   width: 25px;
   height: 2px;
-  background-color: white;
+  background-color: var(--clr-light);
   position: relative;
   z-index: -1;
 }
@@ -309,7 +309,7 @@ header {
   position: absolute;
   width: 25px;
   height: 2px;
-  background-color: white;
+  background-color: var(--clr-light);
   transition: transform 0.3s ease;
 }
 
@@ -348,7 +348,7 @@ header {
   /* justify-items: flex-start; */
   align-items: flex-start;
   padding-left: 3em;
-  color: white;
+  color: var(--clr-light);
 
   /* display: flex; */
 }
@@ -447,7 +447,8 @@ section.about {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background: white;
+  background: var(--clr-light);
+  z-index: 150;
   /* padding: 0 20em; */
 }
 section .section__body {
@@ -461,7 +462,7 @@ section.about img {
   justify-self: end;
   width: 300px;
   height: 300px;
-  border: 15px white solid;
+  border: 15px var(--clr-light) solid;
   position: relative;
   display: grid;
   border-radius: 30px;
@@ -491,9 +492,12 @@ section.about img {
   width: 100px;
   height: 100px;
   border: none;
-  z-index: -100;
+  /* z-index: -100; */
   margin-bottom: -25px;
   object-fit: contain;
+}
+.section__body--about--history .iContribute {
+  width: 50px;
 }
 
 .section__body--about--history .history__title {
@@ -530,7 +534,7 @@ section.about img {
   justify-self: end;
   width: 80%;
   height: 70%;
-  border: 15px white solid;
+  border: 15px var(--clr-light) solid;
   position: relative;
 
   display: grid;
@@ -642,7 +646,7 @@ section.services {
   padding-left: 0;
   padding-right: 0;
   padding-bottom: 1.5em;
-  background: white;
+  background: var(--clr-light);
   /* box-shadow: var(--bs); */
   /* background: var(--clr-light); */
   /* margin-bottom: 1em;   */
@@ -809,7 +813,7 @@ section.services {
 }
 @keyframes text_reveal {
   100% {
-    color: white;
+    color: var(--clr-light);
   }
 }
 @keyframes text_reveal_name {
@@ -897,13 +901,15 @@ section.services {
     justify-content: space-around;
     align-items: center;
     list-style: none;
+
     color: var(--clr-light);
 
     /* margin-right: ;? */
   }
 
   .nav__item {
-    margin-right: 1rem;
+    /* margin-right: 1.5rem; */
+    margin: 0 0.85rem;
   }
   .nav__item a {
     text-decoration: none;
@@ -944,7 +950,7 @@ section.services {
     justify-self: end;
     width: 100% !important;
     height: 50% !important;
-    border: 15px white solid;
+    border: 15px var(--clr-light) solid;
     position: relative;
     z-index: -5;
     display: grid;
